--- a/CHAT_ROOM.html
+++ b/CHAT_ROOM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kwitter Room</title>
+	<title>CHAT Room</title>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -13,7 +13,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="CITW_styling.css">
+<link rel="stylesheet" type="text/css" href="CHAT_styling.css">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
 <button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="LOGOUT()">Logout</button>
 	<center>
 		<h1 class="header">	
-			Kwitter	
+			CHAT	
 			<sup>
 				<img src="m2.png">
 			</sup>
@@ -36,6 +36,6 @@
 		<div id="output"></div>		
 	</center>
 </div>
-<script src="CITW_room.js"></script>
+<script src="CHAT_room.js"></script>
 </body>
 </html>
